Bug#631563 Using visibility so Runfield will work on stage

--- a/media/css/wow.css
+++ b/media/css/wow.css
@@ -954,7 +954,7 @@ div.chain-3 {
 
 /* Demo iFrame */
 #demo-viewport { 
-	display: none;
+        visibility: hidden;
 	position: absolute;
 	top: 0;
 	left: 0;
